--- a/deploy/nginx/parent.vossie.net.conf
+++ b/deploy/nginx/parent.vossie.net.conf
@@ -62,7 +62,14 @@ server {
     }
 
     # Health check endpoint (optional; point deploy.sh SITE_URL here)
+    # IMPORTANT: preserve the original Host header so Django sees the public host
     location = /accounts/login/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_redirect off;
         proxy_pass http://vossie_parent_backend;
         proxy_read_timeout 10s;
     }
