--- a/deploy/nginx/parent.vossie.net.conf
+++ b/deploy/nginx/parent.vossie.net.conf
@@ -10,6 +10,18 @@ upstream vossie_parent_backend {
     # server unix:/run/vossie/gunicorn.sock fail_timeout=0;
 }
 
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    return 444;
+}
+
+server {
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
+    ssl_reject_handshake on;
+}
+
 # Redirect HTTP to HTTPS
 server {
     listen 80;
@@ -52,10 +64,8 @@ server {
     # Proxy to Gunicorn
     location / {
         proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
         proxy_redirect off;
         proxy_pass http://vossie_parent_backend;
         proxy_read_timeout 60s;
@@ -65,10 +75,8 @@ server {
     # IMPORTANT: preserve the original Host header so Django sees the public host
     location = /accounts/login/ {
         proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
         proxy_redirect off;
         proxy_pass http://vossie_parent_backend;
         proxy_read_timeout 10s;
